--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
       "tests/**"
     ]
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/moraisvinny/spotify-wrapper.git"
@@ -38,6 +37,10 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "mocha": "^5.1.1",
-    "nyc": "^11.7.1"
+    "node-fetch": "^2.1.2",
+    "nyc": "^11.7.1",
+    "sinon": "4.5",
+    "sinon-chai": "^3.0.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
