--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: node_js
 node_js:
-  - "iojs"
   - "8"
+cache:
+  directories:
+    "node_modules"
+
+before_script:
+  - npm run build:all
+after_success:
+  - npm run test:cov
