--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:all": "npm run build && npm run build:umd",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:w": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
-    "test:cov": "nyc npm test"
+    "test:cov": "nyc npm test",
+    "coveralls": "npm run test:cov && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
     "reporter": [
@@ -40,10 +41,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "mocha": "^5.1.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "node-fetch": "^2.1.2",
     "nyc": "^11.7.1",
     "rimraf": "^2.6.2",
