--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:w": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
     "test:cov": "nyc npm test",
-    "coveralls": "npm run test:cov && nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
     "reporter": [
