versao para publicar no npm

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spotify-wrapper",
   "version": "1.0.0",
   "description": "A wrapper to work with the Spotify Web API",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "test": "tests"
   },
@@ -17,6 +17,10 @@
     "test:cov": "nyc npm test",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
+  "files": [
+    "lib",
+    "dist"
+  ],
   "nyc": {
     "reporter": [
       "text",
